Fix footer width and spacing

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,12 +2,17 @@ footer {
     text-align: center;
     border-top: 2px solid #4E4E50;
     margin-top: 48px;
+    width: 85%;
+    margin-left: auto;
+    margin-right: auto;
 
     @include desktop-only {
         width: 100%;
     }
 
     p {
+        margin-top: 12px;
+        margin-bottom: 12px;
         font-size: 0.75rem;
 
         a {
